Update mcserv.sh